--- a/src/locales/uk-UA.po
+++ b/src/locales/uk-UA.po
@@ -8,7 +8,7 @@ msgstr ""
 "Language: uk\n"
 "Project-Id-Version: niifi\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2021-08-10 15:01\n"
+"PO-Revision-Date: 2021-08-12 10:39\n"
 "Last-Translator: \n"
 "Language-Team: Ukrainian\n"
 "Plural-Forms: nplurals=4; plural=((n%10==1 && n%100!=11) ? 0 : ((n%10 >= 2 && n%10 <=4 && (n%100 < 12 || n%100 > 14)) ? 1 : ((n%10 == 0 || (n%10 >= 5 && n%10 <=9)) || (n%100 >= 11 && n%100 <= 14)) ? 2 : 3));\n"
@@ -224,8 +224,6 @@ msgstr ""
 msgid "Add {0} to Metamask <0/>"
 msgstr "Додати {0} до Metamask <0/>"
 
-#: src/hooks/useAddLiquidity.ts
-#: src/hooks/useAddLiquidity.ts
 #: src/pages/AddLiquidity/index.tsx
 #: src/pages/AddLiquidity/index.tsx
 msgid "Add {0} {1} and {2} {3}"
@@ -743,11 +741,11 @@ msgstr ""
 
 #: src/components/earn/StakingModal.tsx
 msgid "Deposit liquidity"
-msgstr "Вторинна ліквідність"
+msgstr "Зарахування ліквідності"
 
 #: src/components/earn/UnstakingModal.tsx
 msgid "Deposited liquidity:"
-msgstr "Відкладена ліквідність:"
+msgstr "Зарахована ліквідність:"
 
 #: src/components/earn/StakingModal.tsx
 msgid "Deposited {0} UNI-V2"
@@ -1887,10 +1885,6 @@ msgstr ""
 msgid "Top Looser Pools"
 msgstr ""
 
-#: 
-#~ msgid "Top Loosers"
-#~ msgstr ""
-
 #: src/pages/Discover/index.tsx
 msgid "Top Losers"
 msgstr ""
@@ -2550,3 +2544,4 @@ msgstr ""
 #: 
 #~ msgid "← Back to Pools Overview"
 #~ msgstr ""
+
