--- a/src/locales/he-IL.po
+++ b/src/locales/he-IL.po
@@ -8,7 +8,7 @@ msgstr ""
 "Language: he\n"
 "Project-Id-Version: niifi\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2021-08-12 11:52\n"
+"PO-Revision-Date: 2021-08-12 11:58\n"
 "Last-Translator: \n"
 "Language-Team: Hebrew\n"
 "Plural-Forms: nplurals=4; plural=n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || n%100==4 ? 2 : 3;\n"
@@ -1271,7 +1271,7 @@ msgid "Top Gainers"
 msgstr ""
 
 #: src/components/pools/PoolsOverview.tsx
-msgid "Top Looser Pools"
+msgid "Top Loser Pools"
 msgstr ""
 
 #: src/pages/Discover/index.tsx
