--- a/src/locales/hu-HU.po
+++ b/src/locales/hu-HU.po
@@ -1512,8 +1512,8 @@ msgid "fee"
 msgstr ""
 
 #: src/components/SearchModal/ManageLists.tsx
-msgid "https:// or ipfs:// or ENS name"
-msgstr "https: // vagy ipfs: // vagy ENS név"
+msgid "https:// or ipfs://"
+msgstr ""
 
 #: src/components/TransactionSettings/index.tsx
 msgid "minutes"
