--- a/src/locales/id-ID.po
+++ b/src/locales/id-ID.po
@@ -1512,8 +1512,8 @@ msgid "fee"
 msgstr ""
 
 #: src/components/SearchModal/ManageLists.tsx
-msgid "https:// or ipfs:// or ENS name"
-msgstr "https:// atau ipfs:// atau nama ENS"
+msgid "https:// or ipfs://"
+msgstr ""
 
 #: src/components/TransactionSettings/index.tsx
 msgid "minutes"
