--- a/src/locales/nl-NL.po
+++ b/src/locales/nl-NL.po
@@ -1512,8 +1512,8 @@ msgid "fee"
 msgstr ""
 
 #: src/components/SearchModal/ManageLists.tsx
-msgid "https:// or ipfs:// or ENS name"
-msgstr "https: // of ipfs: // of ENS-naam"
+msgid "https:// or ipfs://"
+msgstr ""
 
 #: src/components/TransactionSettings/index.tsx
 msgid "minutes"
