--- a/src/locales/uk-UA.po
+++ b/src/locales/uk-UA.po
@@ -1512,8 +1512,8 @@ msgid "fee"
 msgstr ""
 
 #: src/components/SearchModal/ManageLists.tsx
-msgid "https:// or ipfs:// or ENS name"
-msgstr "https: // або ipfs: // або ім’я ENS"
+msgid "https:// or ipfs://"
+msgstr ""
 
 #: src/components/TransactionSettings/index.tsx
 msgid "minutes"
